nndl/grammar/NNDLParser.py
# Generated from NNDL.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class NNDLParser ( Parser ):

    grammarFileName = "NNDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'='", "','", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'&&'", "'||'", "'*'", "'/'", "'%'", "'+'", 
                     "'-'", "';'", "'import'", "'network'", "'end network'", 
                     "'neurons'", "'end neurons'", "'connections'", "'end connections'", 
                     "'layer'", "<INVALID>", "'connect'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STAT_END", "IMPORT", "NETWORK_OPEN", 
                      "NETWORK_END", "NEURON_OPEN", "NEURON_END", "CONNECT_OPEN", 
                      "CONNECT_END", "LAYER", "MAT_DECL", "CONNECT", "CLASS", 
                      "NEUR_VAR", "ID", "NUM", "WS" ]

    RULE_prog = 0
    RULE_import_stat = 1
    RULE_network_stat = 2
    RULE_neuron_stat = 3
    RULE_connection_stat = 4
    RULE_layer_stat = 5
    RULE_con_stat = 6
    RULE_neuron_selection = 7
    RULE_logical_expr = 8
    RULE_log_pred_expr = 9
    RULE_class_expr = 10
    RULE_predicate = 11
    RULE_math_expr = 12

    ruleNames =  [ "prog", "import_stat", "network_stat", "neuron_stat", 
                   "connection_stat", "layer_stat", "con_stat", "neuron_selection", 
                   "logical_expr", "log_pred_expr", "class_expr", "predicate", 
                   "math_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    STAT_END=22
    IMPORT=23
    NETWORK_OPEN=24
    NETWORK_END=25
    NEURON_OPEN=26
    NEURON_END=27
    CONNECT_OPEN=28
    CONNECT_END=29
    LAYER=30
    MAT_DECL=31
    CONNECT=32
    CLASS=33
    NEUR_VAR=34
    ID=35
    NUM=36
    WS=37

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def network_stat(self):
            return self.getTypedRuleContext(NNDLParser.Network_statContext,0)


        def EOF(self):
            return self.getToken(NNDLParser.EOF, 0)

        def import_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Import_statContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Import_statContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = NNDLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NNDLParser.IMPORT:
                self.state = 26
                self.import_stat()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.network_stat()
            self.state = 33
            self.match(NNDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(NNDLParser.IMPORT, 0)

        def ID(self):
            return self.getToken(NNDLParser.ID, 0)

        def STAT_END(self):
            return self.getToken(NNDLParser.STAT_END, 0)

        def getRuleIndex(self):
            return NNDLParser.RULE_import_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stat" ):
                listener.enterImport_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stat" ):
                listener.exitImport_stat(self)




    def import_stat(self):

        localctx = NNDLParser.Import_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(NNDLParser.IMPORT)
            self.state = 36
            self.match(NNDLParser.ID)
            self.state = 37
            self.match(NNDLParser.STAT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Network_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORK_OPEN(self):
            return self.getToken(NNDLParser.NETWORK_OPEN, 0)

        def neuron_stat(self):
            return self.getTypedRuleContext(NNDLParser.Neuron_statContext,0)


        def connection_stat(self):
            return self.getTypedRuleContext(NNDLParser.Connection_statContext,0)


        def NETWORK_END(self):
            return self.getToken(NNDLParser.NETWORK_END, 0)

        def getRuleIndex(self):
            return NNDLParser.RULE_network_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork_stat" ):
                listener.enterNetwork_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork_stat" ):
                listener.exitNetwork_stat(self)




    def network_stat(self):

        localctx = NNDLParser.Network_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_network_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(NNDLParser.NETWORK_OPEN)
            self.state = 40
            self.neuron_stat()
            self.state = 41
            self.connection_stat()
            self.state = 42
            self.match(NNDLParser.NETWORK_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Neuron_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEURON_OPEN(self):
            return self.getToken(NNDLParser.NEURON_OPEN, 0)

        def NEURON_END(self):
            return self.getToken(NNDLParser.NEURON_END, 0)

        def layer_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Layer_statContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Layer_statContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_neuron_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeuron_stat" ):
                listener.enterNeuron_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeuron_stat" ):
                listener.exitNeuron_stat(self)




    def neuron_stat(self):

        localctx = NNDLParser.Neuron_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_neuron_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(NNDLParser.NEURON_OPEN)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.layer_stat()
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==NNDLParser.LAYER):
                    break

            self.state = 50
            self.match(NNDLParser.NEURON_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Connection_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT_OPEN(self):
            return self.getToken(NNDLParser.CONNECT_OPEN, 0)

        def CONNECT_END(self):
            return self.getToken(NNDLParser.CONNECT_END, 0)

        def con_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Con_statContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Con_statContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_connection_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnection_stat" ):
                listener.enterConnection_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnection_stat" ):
                listener.exitConnection_stat(self)




    def connection_stat(self):

        localctx = NNDLParser.Connection_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_connection_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(NNDLParser.CONNECT_OPEN)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NNDLParser.T__3:
                self.state = 53
                self.con_stat()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(NNDLParser.CONNECT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Layer_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAYER(self):
            return self.getToken(NNDLParser.LAYER, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NNDLParser.ID)
            else:
                return self.getToken(NNDLParser.ID, i)

        def MAT_DECL(self):
            return self.getToken(NNDLParser.MAT_DECL, 0)

        def STAT_END(self):
            return self.getToken(NNDLParser.STAT_END, 0)

        def getRuleIndex(self):
            return NNDLParser.RULE_layer_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer_stat" ):
                listener.enterLayer_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer_stat" ):
                listener.exitLayer_stat(self)




    def layer_stat(self):

        localctx = NNDLParser.Layer_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_layer_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(NNDLParser.LAYER)
            self.state = 62
            self.match(NNDLParser.T__0)
            self.state = 63
            self.match(NNDLParser.ID)
            self.state = 64
            self.match(NNDLParser.MAT_DECL)
            self.state = 65
            self.match(NNDLParser.T__1)
            self.state = 66
            self.match(NNDLParser.ID)
            self.state = 67
            self.match(NNDLParser.STAT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Con_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neuron_selection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Neuron_selectionContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Neuron_selectionContext,i)


        def CONNECT(self):
            return self.getToken(NNDLParser.CONNECT, 0)

        def ID(self):
            return self.getToken(NNDLParser.ID, 0)

        def STAT_END(self):
            return self.getToken(NNDLParser.STAT_END, 0)

        def getRuleIndex(self):
            return NNDLParser.RULE_con_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCon_stat" ):
                listener.enterCon_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCon_stat" ):
                listener.exitCon_stat(self)




    def con_stat(self):

        localctx = NNDLParser.Con_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_con_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.neuron_selection()
            self.state = 70
            self.match(NNDLParser.T__0)
            self.state = 71
            self.match(NNDLParser.CONNECT)
            self.state = 72
            self.neuron_selection()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NNDLParser.T__2:
                self.state = 73
                self.match(NNDLParser.T__2)
                self.state = 74
                self.neuron_selection()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(NNDLParser.T__1)
            self.state = 81
            self.match(NNDLParser.ID)
            self.state = 82
            self.match(NNDLParser.STAT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Neuron_selectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Logical_exprContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_neuron_selection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeuron_selection" ):
                listener.enterNeuron_selection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeuron_selection" ):
                listener.exitNeuron_selection(self)




    def neuron_selection(self):

        localctx = NNDLParser.Neuron_selectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_neuron_selection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(NNDLParser.T__3)
            self.state = 85
            self.logical_expr()
            self.state = 86
            self.match(NNDLParser.T__2)
            self.state = 87
            self.logical_expr()
            self.state = 88
            self.match(NNDLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logical_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_pred_expr(self):
            return self.getTypedRuleContext(NNDLParser.Log_pred_exprContext,0)


        def class_expr(self):
            return self.getTypedRuleContext(NNDLParser.Class_exprContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(NNDLParser.Math_exprContext,0)


        def getRuleIndex(self):
            return NNDLParser.RULE_logical_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expr" ):
                listener.enterLogical_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expr" ):
                listener.exitLogical_expr(self)




    def logical_expr(self):

        localctx = NNDLParser.Logical_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logical_expr)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NNDLParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.log_pred_expr()
                pass
            elif token in [NNDLParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.class_expr()
                pass
            elif token in [NNDLParser.NEUR_VAR, NNDLParser.NUM]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.math_expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Log_pred_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(NNDLParser.PredicateContext,0)


        def getRuleIndex(self):
            return NNDLParser.RULE_log_pred_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_pred_expr" ):
                listener.enterLog_pred_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_pred_expr" ):
                listener.exitLog_pred_expr(self)




    def log_pred_expr(self):

        localctx = NNDLParser.Log_pred_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_log_pred_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(NNDLParser.T__5)
            self.state = 96
            self.predicate(0)
            self.state = 97
            self.match(NNDLParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(NNDLParser.CLASS, 0)

        def getRuleIndex(self):
            return NNDLParser.RULE_class_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_expr" ):
                listener.enterClass_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_expr" ):
                listener.exitClass_expr(self)




    def class_expr(self):

        localctx = NNDLParser.Class_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_class_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(NNDLParser.T__7)
            self.state = 100
            self.match(NNDLParser.CLASS)
            self.state = 101
            self.match(NNDLParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Math_exprContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Math_exprContext,i)


        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.PredicateContext)
            else:
                return self.getTypedRuleContext(NNDLParser.PredicateContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)



    def predicate(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = NNDLParser.PredicateContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_predicate, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.math_expr(0)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NNDLParser.T__9) | (1 << NNDLParser.T__10) | (1 << NNDLParser.T__11) | (1 << NNDLParser.T__12) | (1 << NNDLParser.T__13))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 106
            self.math_expr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = NNDLParser.PredicateContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_predicate)
                    self.state = 108
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 109
                    _la = self._input.LA(1)
                    if not(_la==NNDLParser.T__14 or _la==NNDLParser.T__15):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 110
                    self.predicate(2) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Math_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEUR_VAR(self):
            return self.getToken(NNDLParser.NEUR_VAR, 0)

        def NUM(self):
            return self.getToken(NNDLParser.NUM, 0)

        def math_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNDLParser.Math_exprContext)
            else:
                return self.getTypedRuleContext(NNDLParser.Math_exprContext,i)


        def getRuleIndex(self):
            return NNDLParser.RULE_math_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_expr" ):
                listener.enterMath_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_expr" ):
                listener.exitMath_expr(self)



    def math_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = NNDLParser.Math_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_math_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NNDLParser.NEUR_VAR]:
                self.state = 117
                self.match(NNDLParser.NEUR_VAR)
                pass
            elif token in [NNDLParser.NUM]:
                self.state = 118
                self.match(NNDLParser.NUM)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 127
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = NNDLParser.Math_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_expr)
                        self.state = 121
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 122
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NNDLParser.T__16) | (1 << NNDLParser.T__17) | (1 << NNDLParser.T__18))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 123
                        self.math_expr(5)
                        pass

                    elif la_ == 2:
                        localctx = NNDLParser.Math_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_expr)
                        self.state = 124
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 125
                        _la = self._input.LA(1)
                        if not(_la==NNDLParser.T__19 or _la==NNDLParser.T__20):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 126
                        self.math_expr(4)
                        pass

             
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[11] = self.predicate_sempred
        self._predicates[12] = self.math_expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def predicate_sempred(self, localctx:PredicateContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         

    def math_expr_sempred(self, localctx:Math_exprContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         




